--- a/ark/templates/account/signup.html
+++ b/ark/templates/account/signup.html
@@ -10,8 +10,8 @@
       {{ form.username }}
       {{ form.email.label }}
       {{ form.email() }}
-      {{ form.is_male.label }}
-      {{ form.is_male() }}
+      {{ form.gender.label }}
+      {{ form.gender() }}
       {{ form.password.label }}
       {{ form.password() }}
       {{ form.confirm_password.label }}
