--- a/ark/templates/index.html
+++ b/ark/templates/index.html
@@ -17,7 +17,7 @@
 <center>
   <h1>chaser</h1>
   <p>chasing your dream.</p>
-  {% if current_user.is_authenticated %}
+  {% if current_user.is_authenticated() %}
   <hr style="margin: 60px 0px 30px;" />
   <img src="{{ current_user.avatar_url }}" class="avatar" />
   <div style="padding: 20px;">
