--- a/ark/templates/index.html
+++ b/ark/templates/index.html
@@ -1,35 +1,18 @@
-<head>
-  <style>
-    body {
-      padding: 60px;
-      background: #eee;
-    }
-    h1 {
-      font-size: 56px;
-      color: #333;
-    }
-    p {
-      font-size: 18px;
-      color: #888;
-    }
-  </style>
-</head>
-<center>
-  <h1>chaser</h1>
-  <p>chasing your dream.</p>
-  {% if current_user.is_authenticated() %}
-  <hr style="margin: 60px 0px 30px;" />
-  <img src="{{ current_user.avatar_url }}" class="avatar" />
-  <div style="padding: 20px;">
-    Hi, {{ current_user.username }}
-  </div>
-  <style>
-    .avatar {
-      width: 90px;
-      height: 90px;
-      border-radius: 90px;
-      border: solid #fff 6px;
-    }
-  </style>
-  {% endif %}
-</center>
+{%- extends 'layout.html' %}
+{%- block static %}
+<link rel="stylesheet" href="{{ url_for('static', filename='components/normalize.css/normalize.css') }}" type="text/css" />
+<link rel="stylesheet" href="{{ url_for('static', filename='styles/master/index.css') }}" type="text/css" />
+
+{%- endblock %}
+{%- block main %}
+<div class="mask"></div>
+<div class="wrapper">
+  <div class="logo" id="logo">iChaser</div>
+  <div class="ask">毕业前必须做些什么？</div>
+</div>
+<div class="main">
+  <div class="chasers" id="chasers"></div>
+</div>
+<script src="{{ url_for('static', filename='components/jquery/dist/jquery.min.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/master/index.js') }}"></script>
+{%- endblock %}
