--- a/ark/master/assets/styles/index.styl
+++ b/ark/master/assets/styles/index.styl
@@ -14,7 +14,7 @@ body
 
 .wrapper
     position fixed
-    top 35%
+    top 40%
     left 50%
     width 500px
     height 100px
@@ -36,8 +36,6 @@ body
   .chaser
     display inline-block
     position fixed
-    top 50%
-    left 50%
     background rgba(255,255,255,0.3)
     padding 10px
     border 1px solid #fff;
@@ -55,6 +53,13 @@ body
       font-size 14px
       color #fff
 
+.pic-copyright
+  font-size 12px;
+  color #aaa
+  text-align center
+  position fixed
+  bottom 20px
+  right 20px
 
 .popOut
   -webkit-animation-name popOut
