add text in index.html, update animate

--- a/ark/master/assets/styles/index.styl
+++ b/ark/master/assets/styles/index.styl
@@ -53,9 +53,11 @@ body
       font-size 14px
       color #fff
 
-.pic-copyright
-  font-size 12px;
+.pic-copyright,
+.pic-copyright a
   color #aaa
+  font-size 12px;
+  text-decoration none
   text-align center
   position fixed
   bottom 20px
