--- a/ark/templates/index.html
+++ b/ark/templates/index.html
@@ -12,6 +12,7 @@
 </div>
 <div class="main">
   <div class="chasers" id="chasers"></div>
+  <div class="pic-copyright"><a href="http://yiwenvision.lofter.com/post/19a2f6_54a29ee" target="_blank">图片来自 Yiwen</a></div>
 </div>
 <script src="{{ url_for('static', filename='components/jquery/dist/jquery.min.js') }}"></script>
 <script src="{{ url_for('static', filename='scripts/master/index.js') }}"></script>
