--- a/ark/master/assets/styles/index.styl
+++ b/ark/master/assets/styles/index.styl
@@ -13,19 +13,18 @@ body
   z-index -1
 
 .wrapper
-    position fixed
-    top 40%
-    left 50%
-    width 500px
-    height 100px
-    margin-top -50px
-    margin-left -250px
-    text-align center
-    line-height 100px
+  position fixed
+  top 48%
+  left 50%
+  min-width 500px
+  margin-top -200px
+  margin-left -250px
+  text-align center
   .logo
     color #fff
     font-weight bold
     font-size 90px
+    line-height 100px
   .ask
     height 30px
     line-height 30px
@@ -34,11 +33,16 @@ body
 
 .chasers
   .chaser
+    &:hover
+      background rgba(255,255,255,0.4)
+      -webkit-animation-name pulse
+      -webkit-animation-duration 0.25s
     display inline-block
     position fixed
     background rgba(255,255,255,0.3)
     padding 10px
     border 1px solid #fff;
+    border-radius 5px
     .avatar
       text-align center
       position absolute
@@ -53,6 +57,35 @@ body
       font-size 14px
       color #fff
 
+.sign-container
+  position fixed
+  left 50%
+  width 600px
+  margin-top 10px
+  margin-left -300px
+
+  input, button
+    padding 10px
+    width 250px
+    color #fff
+    margin 10px
+    background none transparent
+    border 2px solid rgba(255,255,255,0.6)
+    border-radius 5px
+
+  button
+    &:hover
+      background rgba(255,255,255,0.3)
+    width 150px
+
+  a
+    color #ccc
+    font-size 13px
+    text-decoration none
+
+.signup-container
+  display none
+
 .pic-copyright,
 .pic-copyright a
   color #aaa
@@ -63,11 +96,21 @@ body
   bottom 20px
   right 20px
 
-.popOut
-  -webkit-animation-name popOut
+.bounceIn
+  -webkit-animation-name bounceIn
   -webkit-animation-duration 0.5s
 
-@keyframes popOut
+@keyframes pulse
+  0%
+    transform scale(1)
+  30%
+    transform scale(1.15)
+  80%
+    transform scale(0.85)
+  100%
+    transform scale(1)
+
+@keyframes bounceIn
   0%
     opacity 0
     transform scale(.3)
