--- a/ark/templates/index.html
+++ b/ark/templates/index.html
@@ -1,6 +1,7 @@
 {%- extends 'layout.html' %}
 {%- block static %}
 <link rel="stylesheet" href="{{ url_for('static', filename='components/normalize.css/normalize.css') }}" type="text/css" />
+<link rel="stylesheet" href="{{ url_for('static', filename='components/tooltipster/css/tooltipster.css') }}" type="text/css" />
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/master/index.css') }}" type="text/css" />
 {%- endblock %}
 
@@ -13,19 +14,19 @@
     <div class="sign-container signin-container">
       <form action="{{ url_for('account.signin') }}" id="signin-form" method="post">
         {{ sign_in_form.csrf_token }}
-        <section>{{ sign_in_form.email(placeholder=sign_in_form.email.label.text) }}</section>
-        <section>{{ sign_in_form.password(placeholder=sign_in_form.password.label.text) }}</section>
+        <section>{{ sign_in_form.signin_email(placeholder=sign_in_form.signin_email.label.text) }}</section>
+        <section>{{ sign_in_form.signin_password(placeholder=sign_in_form.signin_password.label.text) }}</section>
         <section><button type="submit">登录</button></section>
         <section><a href="javascript:void(0)" class="sign-btn">注册</a></section>
       </form>
     </div>
     <div class="sign-container signup-container">
-      <form action="{{ url_for('account.signup') }}" id="signup-form">
+      <form action="{{ url_for('account.signup') }}" id="signup-form" method="post">
         {{ sign_up_form.csrf_token }}
         <section>{{ sign_up_form.username(placeholder=sign_up_form.username.label.text) }}</section>
         <section>{{ sign_up_form.email(placeholder=sign_up_form.email.label.text) }}</section>
         <section>{{ sign_up_form.password(placeholder=sign_up_form.password.label.text) }}</section>
-        <section><button>注册</button></section>
+        <section><button type="submit">注册</button></section>
         <section><a href="javascript:void(0)" class="sign-btn">登录</a></section>
       </form>
     </div>
@@ -34,5 +35,8 @@
   <div class="pic-copyright"><a href="http://yiwenvision.lofter.com/post/19a2f6_54a29ee" target="_blank">图片来自 Yiwen</a></div>
 </div>
 <script src="{{ url_for('static', filename='components/jquery/dist/jquery.min.js') }}"></script>
+<script src="{{ url_for('static', filename='components/jquery-form/jquery.form.js') }}"></script>
+<script src="{{ url_for('static', filename='components/jquery-validation/dist/jquery.validate.min.js') }}"></script>
+<script src="{{ url_for('static', filename='components/tooltipster/js/jquery.tooltipster.min.js') }}"></script>
 <script src="{{ url_for('static', filename='scripts/master/index.js') }}"></script>
 {%- endblock %}
