add weibo oauth link in index.html

--- a/ark/templates/index.html
+++ b/ark/templates/index.html
@@ -18,6 +18,7 @@
         <section>{{ sign_in_form.signin_password(placeholder=sign_in_form.signin_password.label.text) }}</section>
         <section><button type="submit">登录</button></section>
         <section><a href="javascript:void(0)" class="sign-btn">注册</a></section>
+        <section><a href="{{ url_for('oauth.oauth', service='weibo') }}">微博登陆</a></section>
       </form>
     </div>
     <div class="sign-container signup-container">
