--- a/ark/dashboard/assets/styles/base.styl
+++ b/ark/dashboard/assets/styles/base.styl
@@ -1,19 +1,93 @@
+*
+  margin 0
+  padding 0
+
+ul
+  padding 0
+  margin 0
+  list-style none
+
+body
+  color #7e7e7e
+  background #f7f7f7
+  font-size 14px
+
 a
   color #333
   text-decoration none
 
-#container
+.container
   margin 0 auto
   width 1280px
 
-.navbar
-  ul
-    list-style none
-    li
-      display inline-block
-      padding 3px 10px
+.header
+  width 100%
+  height 80px
+  background #424242
 
-table.accounts 
-  text-align center
-  td
-    padding 3px 8px
+.header
+  h1
+    color #fff
+    font-weight normal
+    line-height 80px
+    text-indent 3em
+    float left
+    margin 0
+
+  .nav
+    .current-user
+      color #aaa
+
+  .nav,
+  .nav a
+    color #fff
+    line-height 80px
+    padding 0 20px
+
+.footer
+  width 100%
+  height 30px
+  line-height 30px
+  text-indent 1em
+
+.pull-left
+  float left
+
+.pull-right
+  float right
+
+.main
+  overflow hidden
+  background #fff
+  .menu
+    width 150px
+    min-height 80vh
+    background #38c2a8
+
+    ul.nav li
+      a
+        transition-duration 0.25s
+        color #fff
+        text-decoration none
+        display block
+        width 150px
+        height 40px
+        line-height 40px
+        text-align center
+
+      &:hover
+        transition-duration 0.25s
+        background #31a592
+
+      &.current
+        background #31a592
+
+  .content
+    margin-left 150px
+    padding 30px
+
+    .title
+      font-size 28px
+      margin-bottom 20px
+      border-bottom 1px solid #ddd
+      padding-bottom 20px
