--- a/ark/templates/dashboard/index.html
+++ b/ark/templates/dashboard/index.html
@@ -1,3 +1,7 @@
 {% extends 'dashboard/base.html' %}
-{% block main %}
+
+{% block title %}Dashboard{% endblock %}
+
+{% block content %}
+  Welcome, {{ current_user.username }}
 {% endblock %}
