--- a/ark/templates/dashboard/accounts.html
+++ b/ark/templates/dashboard/accounts.html
@@ -1,29 +1,34 @@
 {% extends 'dashboard/base.html' %}
+
+{% block title %}Account{% endblock %}
+
 {% block content %}
-<table class="accounts">
-  <thead>
-    <tr>
-      <td>ID</td>
-      <td>Email</td>
-      <td>Username</td>
-      <td>Gender</td>
-      <td>SignUp</td>
-      <td>Last Signin</td>
-      <td>OP</td>
-    </tr>
-  </thead>
-  <tbody>
-    {% for account in accounts %}
-    <tr>
-      <td>{{ account.id }}</td>
-      <td>{{ account.email }}</td>
-      <td>{{ account.username }}</td>
-      <td>{{ account.is_male | gender }}</td>
-      <td>{{ account.created | date('%Y-%m-%d') }}</td>
-      <td>{{ account.get_last_signin() | date('%Y-%m-%d') }}</td>
-      <td><a href="{{ url_for('dashboard.account', uid=account.id) }}">Edit</a> Delete</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+<div class="table-container">
+  <table class="accounts">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Email</th>
+        <th>Username</th>
+        <th>Gender</th>
+        <th>SignUp</th>
+        <th>Last Signin</th>
+        <th>OP</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for account in accounts %}
+      <tr>
+        <td>{{ account.id }}</td>
+        <td>{{ account.email }}</td>
+        <td>{{ account.username }}</td>
+        <td>{{ account.is_male | gender }}</td>
+        <td>{{ account.created | format_datetime('Y-M-d HH:mm:SS') }}</td>
+        <td>{{ account.last_signin | format_datetime('Y-M-d HH:mm:SS') }}</td>
+        <td><a href="{{ url_for('dashboard.account', uid=account.id) }}">Edit</a> Delete</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
 {% endblock %}
