--- a/ark/templates/dashboard/base.html
+++ b/ark/templates/dashboard/base.html
@@ -6,6 +6,8 @@
     <title>iChaser - dashboard</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='components/normalize.css/normalize.css') }}" type="text/css" />
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/dashboard/base.css') }}" type="text/css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='components/tooltipster/css/tooltipster.css') }}" type="text/css" />
+    {% block styles %}{% endblock %}
   </head>
   <body>
 
@@ -30,9 +32,9 @@
         </div>
         <div class="content">
           <h2 class="title">
-            {% block title %}{% endblock %}
+            {%- block title %}{%- endblock %}
           </h2>
-          {% block content %}{% endblock %}
+          {%- block content %}{%- endblock %}
         </div>
         {% endblock %}
       </div>
@@ -42,5 +44,10 @@
       </div>
     </div>
 
+  <script src="{{ url_for('static', filename='components/jquery/dist/jquery.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='components/jquery-form/jquery.form.js') }}"></script>
+  <script src="{{ url_for('static', filename='components/jquery-validation/dist/jquery.validate.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='components/tooltipster/js/jquery.tooltipster.min.js') }}"></script>
+  {%- block scripts %}{%- endblock %}
   </body>
 </html>
