--- a/ark/dashboard/assets/styles/base.styl
+++ b/ark/dashboard/assets/styles/base.styl
@@ -99,26 +99,52 @@ a
       border-bottom 1px solid #ddd
       padding-bottom 20px
 
+.pagination
+  margin-top 20px
+  text-align center
+  background #eee
+  ul li
+    display inline-block
+    a
+      padding 10px
+      display inline-block
+      &:hover
+       background #aaa
+
 .btn-group
   padding-left 60px
   padding-top 20px
 
-  .btn
-    font-size 16px
-    display inline-block
-    width 160px
-    height 40px
-    text-align center
-    color #fff
-    line-height 40px
-    border none
-    background #999
-    border-radius 4px
-    box-shadow  0 3px 0 #777
+.btn
+  height 16px
+  line-height 16px
+  padding 3px 10px
+  display inline-block
+  text-align center
+  color #fff
+  border none
+  background #999
+  border-radius 4px
+  box-shadow  0 3px 0 #777
 
-  .btn-success
-    background #38c2a8
-    box-shadow  0 3px 0 #31a592
+.btn-lg
+  padding 0
+  width 160px
+  height 40px
+  line-height 40px
+  font-size 16px
+
+.btn-success
+  background #38c2a8
+  box-shadow 0 3px 0 #31a592
+
+.btn-info
+  background #3596D0
+  box-shadow 0 3px 0 #1e6c9d
+
+.btn-danger
+  background #b54949
+  box-shadow 0 3px 0 #9B1F1F
 
 .table-container
   width 100%
