--- a/ark/templates/dashboard/inc/paginator.jinja
+++ b/ark/templates/dashboard/inc/paginator.jinja
@@ -21,7 +21,7 @@
     {%- if pagination.has_next %}
     <li><a href="{{ url_for(endpoint, page=pagination.next_num) }}">{{ _('Next') }}</a></li>
     {%- endif %}
-    {%- if pagination.page != pagination.pages %}
+    {%- if not pagination.pages in (0, pagination.pages) %}
     <li><a href="{{ url_for(endpoint, page=pagination.pages) }}">{{ _('Last Page') }}</a></li>
     {%- endif %}
   </ul>
