--- a/ark/templates/goal/create.html
+++ b/ark/templates/goal/create.html
@@ -17,6 +17,7 @@
         </section>
         <section>
         {{ form.image_url(style="display:none") }}
+        {{ form.image_name(style="display:none") }}
         <button type="button" id="upbtn">上传</button>
         <img src="" id="preview" width="500" />
         </section>
