--- a/ark/templates/dashboard/account.html
+++ b/ark/templates/dashboard/account.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/base.html' %}
 
-{% block title %}{{ _('Account') }}{% endblock %}
+{% block title %}{{ _('Account Manage') }}{% endblock %}
 
 {% block styles %}
 {% endblock %}
@@ -47,6 +47,6 @@
 {% endblock %}
 
 {% block scripts %}
-  <script src="{{ url_for('static', filename='scripts/master/account.js') }}"></script>
+  <script src="{{ url_for('static', filename='scripts/dashboard/account.js') }}"></script>
 {% endblock %}
 
