fix bug in goal create, change text in accounts.html'

--- a/ark/templates/dashboard/accounts.html
+++ b/ark/templates/dashboard/accounts.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/base.html' %}
 
-{% block title %}Account{% endblock %}
+{% block title %}{{ _('Account Manage') }}{% endblock %}
 
 {% block content %}
 <div class="table-container">
