--- a/ark/templates/dashboard/base.html
+++ b/ark/templates/dashboard/base.html
@@ -28,7 +28,7 @@
             <li><a href="{{ url_for('dashboard.index') }}">{{ _('Dashboard') }}</a></li>
             <li><a href="{{ url_for('dashboard.accounts') }}">{{ _('Accounts') }}</a></li>
             <li><a href="{{ url_for('dashboard.goals') }}">{{ _('Goals') }}</a></li>
-            <li><a href="{{ url_for('dashboard.goals') }}">{{ _('Activities') }}</a></li>
+            <li><a href="{{ url_for('dashboard.activities') }}">{{ _('Activities') }}</a></li>
           </ul>
         </div>
         <div class="content">
