--- a/ark/templates/dashboard/goals.html
+++ b/ark/templates/dashboard/goals.html
@@ -11,6 +11,7 @@
         <th>{{ _('Title') }}</th>
         <th>{{ _('Author') }}</th>
         <th>{{ _('Added At') }}</th>
+        <th>{{ _('Lasted Activity') }}</th>
         <th>{{ _('Operations') }}</th>
       </tr>
     </thead>
@@ -21,6 +22,7 @@
         <td>{{ goal.title }}</td>
         <td>{{ goal.author.username }}</td>
         <td>{{ goal.created | format_datetime('Y-M-d HH:mm:SS') }}</td>
+        <td>{{ goal.last_activity | format_datetime('Y-M-d HH:mm:SS') }}</td>
         <td><a href="{{ url_for('dashboard.goal', gid=goal.id) }}" class="btn btn-info">Detail</a></td>
       </tr>
       {% endfor %}
