--- a/ark/templates/dashboard/base.html
+++ b/ark/templates/dashboard/base.html
@@ -30,6 +30,7 @@
             <li><a href="{{ url_for('dashboard.accounts') }}">{{ _('Accounts') }}</a></li>
             <li><a href="{{ url_for('dashboard.goals') }}">{{ _('Goals') }}</a></li>
             <li><a href="{{ url_for('dashboard.activities') }}">{{ _('Activities') }}</a></li>
+            <li><a href="{{ url_for('dashboard.chasers') }}">{{ _('Chasers') }}</a></li>
           </ul>
         </div>
         <div class="content">
