--- a/ark/templates/dashboard/accounts.html
+++ b/ark/templates/dashboard/accounts.html
@@ -11,6 +11,7 @@
         <th>{{ _('Email') }}</th>
         <th>{{ _('Username') }}</th>
         <th>{{ _('Gender') }}</th>
+        <th>{{ _('Credit') }}</th>
         <th>{{ _('SignUp') }}</th>
         <th>{{ _('Last Signin') }}</th>
         <th>{{ _('Operations') }}</th>
@@ -22,7 +23,8 @@
         <td>{{ account.id }}</td>
         <td>{{ account.email }}</td>
         <td>{{ account.username }}</td>
-        <td>{{ account.is_male | gender }}</td>
+        <td>{{ account.gender }}</td>
+        <td>{{ account.credit }}</td>
         <td>{{ account.created | format_datetime('Y-M-d HH:mm:SS') }}</td>
         <td>{{ account.last_signin | format_datetime('Y-M-d HH:mm:SS') }}</td>
         <td>
