mention-style notification receivers

--- a/ark/dashboard/assets/styles/base.styl
+++ b/ark/dashboard/assets/styles/base.styl
@@ -215,6 +215,20 @@ a
       padding 4px
       width 400px
 
+#receivers-box
+  margin-top 10px
+  min-height 20px
+  span.receiver
+    display inline-block
+    padding 3px 5px
+    margin 2px 6px
+    border-radius 3px
+    border 1px solid #aaa
+
+    span.close-btn
+      cursor pointer
+      margin-left 10px
+
 .info-bar
   padding 10px 20px
   background #eee
