--- a/ark/templates/dashboard/notification_send.html
+++ b/ark/templates/dashboard/notification_send.html
@@ -2,6 +2,7 @@
 
 {% block title %}{{ _('Notification Manage') }}{% endblock %}
 
+
 {% block content %}
 <div id="info-container" class="info-bar" style="display: none"></div>
 <div class="form-container">
@@ -9,7 +10,12 @@
     {{ form.csrf_token }}
     <section>
       {{ form.receivers.label }}
-      {{ form.receivers() }}
+      <div class="" style="display: inline-block">
+      <input id="receiver" type="text" />
+      <br />
+      <div id="receivers-box"></div>
+      {{ form.receivers(style="display: none") }}
+      </div>
     </section>
     <section>
       {{ form.content.label }}
@@ -23,6 +29,18 @@
 </div>
 {% endblock %}
 
-{% block scripts %}
+{%- block styles %}
+<style>
+.autocomplete-suggestions { border: 1px solid #999; background: #FFF; overflow: auto; }
+.autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; }
+.autocomplete-selected { background: #F0F0F0; }
+.autocomplete-suggestions strong { font-weight: normal; color: #3399FF; }
+.autocomplete-group { padding: 2px 5px; }
+.autocomplete-group strong { display: block; border-bottom: 1px solid #000; }
+</style>
+{%- endblock %}
+
+{%- block scripts %}
+  <script src="{{ url_for('static', filename='components/devbridge-autocomplete/dist/jquery.autocomplete.min.js') }}"></script>
   <script src="{{ url_for('static', filename='scripts/dashboard/notification.js') }}"></script>
-{% endblock %}
+{%- endblock %}
