update account ranking

--- a/ark/templates/dashboard/chasers.html
+++ b/ark/templates/dashboard/chasers.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/base.html' %}
 
-{% block title %}{{ _('Chasers Manage') }}{% endblock %}
+{% block title %}{{ _('Chasers Ranking Manage') }}{% endblock %}
 
 {% block content %}
 <div class="table-container">
