--- a/ark/dashboard/assets/styles/base.styl
+++ b/ark/dashboard/assets/styles/base.styl
@@ -224,10 +224,7 @@ a
     margin 2px 6px
     border-radius 3px
     border 1px solid #aaa
-
-    span.close-btn
-      cursor pointer
-      margin-left 10px
+    cursor pointer
 
 .info-bar
   padding 10px 20px
@@ -243,3 +240,10 @@ a
 
 .topbar
   margin 20px
+
+.autocomplete-suggestions { border: 1px solid #999; background: #FFF; overflow: auto; }
+.autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; }
+.autocomplete-selected { background: #F0F0F0; }
+.autocomplete-suggestions strong { font-weight: normal; color: #3399FF; }
+.autocomplete-group { padding: 2px 5px; }
+.autocomplete-group strong { display: block; border-bottom: 1px solid #000; }
