add goals of accounts

--- a/ark/master/assets/styles/mixin.styl
+++ b/ark/master/assets/styles/mixin.styl
@@ -11,3 +11,10 @@ transform(style)
   -ms-transform style
   -o-transform style
   transform style
+
+box-shadow-func(a b c color)
+ -webkit-box-shadow a b c color
+ -moz-box-shadow a b c color
+ -ms-box-shadow a b c color
+ -o-box-shadow a b c color
+ box-shadow a b c color
