--- a/ark/templates/layout.html
+++ b/ark/templates/layout.html
@@ -7,11 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="{{ web_keyword or site_keyword }}" />
   <meta name="description" content="{{ web_description or site_description }}" />
-  {%- block static %}
+  <link rel="stylesheet" href="{{ url_for('static', filename='components/normalize.css/normalize.css') }}" type="text/css" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles/master/base.css') }}" type="text/css" />
+  <link rel="stylesheet" href="http://at.alicdn.com/t/font_1422208499_6698005.css" type="text/css" />
+    {%- block static %}
   {%- endblock %}
 </head>
 <body>
   {%- block main %}
+  {%- endblock %}
+  {%- block script %}
   {%- endblock %}
   {%- include 'inc/analytics.html' %}
 </body>
