rediret to goals of current user, show goals in pages

--- a/ark/master/assets/styles/base.styl
+++ b/ark/master/assets/styles/base.styl
@@ -128,12 +128,12 @@ ul, li
     border 2px dashed #aaa;
 
     &:hover .card
-      display block
-      cursor pointer
+      color #aaa
 
     .card
-      display none
-      color #aaa
+      display block
+      cursor pointer
+      color #ccc
       font-size 100px
       line-height 150px
       text-align center
