--- a/ark/templates/layout.html
+++ b/ark/templates/layout.html
@@ -9,7 +9,7 @@
   <meta name="description" content="{{ web_description or site_description }}" />
   <link rel="stylesheet" href="{{ url_for('static', filename='components/normalize.css/normalize.css') }}" type="text/css" />
   <link rel="stylesheet" href="{{ url_for('static', filename='styles/master/base.css') }}" type="text/css" />
-  <link rel="stylesheet" href="http://at.alicdn.com/t/font_1422208499_6698005.css" type="text/css" />
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_1422266310_59763.css" type="text/css" />
     {%- block static %}
   {%- endblock %}
 </head>
