update base.html of dashboard

--- a/ark/templates/dashboard/base.html
+++ b/ark/templates/dashboard/base.html
@@ -27,9 +27,9 @@
           <ul class="nav">
             <li><a href="{{ url_for('dashboard.index') }}">{{ _('Dashboard') }}</a></li>
             <li><a href="{{ url_for('dashboard.notifications') }}">{{ _('Notifications') }}</a></li>
-            <li><a href="{{ url_for('dashboard.accounts') }}">{{ _('Accounts') }}</a></li>
-            <li><a href="{{ url_for('dashboard.goals') }}">{{ _('Goals') }}</a></li>
-            <li><a href="{{ url_for('dashboard.activities') }}">{{ _('Activities') }}</a></li>
+            <li><a href="{{ url_for('dashboard.accounts') }}">{{ _('Account Manage') }}</a></li>
+            <li><a href="{{ url_for('dashboard.goals') }}">{{ _('Goal Manage') }}</a></li>
+            <li><a href="{{ url_for('dashboard.activities') }}">{{ _('Activity Manage') }}</a></li>
             <li><a href="{{ url_for('dashboard.chasers') }}">{{ _('Chasers Ranking ') }}</a></li>
             <li><a href="{{ url_for('dashboard.ranking') }}">{{ _('Goals Ranking') }}</a></li>
           </ul>
